Deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fifo-angular-frontend
spec:
  selector:
    matchLabels:
      app: fifo-angular-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: fifo-angular-frontend
    spec:
      containers:
      - name: fifo-angular-frontend
        image: mrpatel1234/fifo:frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: fifo-angular-frontend-service
spec:
  selector:
    app: fifo-angular-frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
