Deployment/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-fifo-service
  labels:
    app: mysql-fifo-service
spec:
  selector:
    matchLabels:
      app: mysql-fifo-service
  replicas: 1 
  template:
    metadata:
      labels:
        app: mysql-fifo-service
        tier: mysql-fifo-service
    spec:
      hostname: mysql-fifo-service
      containers:
      - name: mysql-fifo-service
        image: mysql:5.7
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-fifo-service
  labels:
    app: mysql-fifo-service
spec:
  type: NodePort
  selector:
    app: mysql-fifo-service
    tier: mysql-fifo-service
  ports:
  - port: 3001
    targetPort : 3001
    protocol: TCP
