Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fifo-ingress
  labels:
    name: fifo-ingress
  annotations:
   nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
   nginx.ingress.kubernetes.io/proxy-send-timeout: '60'    
   nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
   nginx.ingress.kubernetes.io/rewrite-target: /$2
   kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /backend(/|$)(.*)
          backend:
            service:
              name: fifo-backend-service
              port:   
                number: 3333
        - pathType: Prefix
          path: /frontend(/|$)(.*)
          frontend:
            service:
              name: fifo-angular-frontend-service
              port: 
                number: 80
